# utilities.py

./: .gitignore  CHANGELOG  Dockerfile  Dockerfile-release  Dockerfile_release  Dockerfile_release_base  Dockerfile_release_test  Dockerfile_test  Dockerfile_test_release  LICENSE  Makefile  README.md  build_docker.sh  check-code  format.sh  install-deps  make-release  pyproject.toml  requirements-1.txt  requirements-2.txt  requirements-test.txt  requirements.txt  run  run-tests  setup.cfg  setup.py
.githooks/: README  pre-push
archive/: Dockerfile  Dockerfile-release  _notify.py  _util.py  build_docker.sh  datetime.py  make-release  mysqlalchemy.py  otherargs.py  pyproject.toml  sampling.py  setup.cfg  test_config.py  test_datetime.py  test_functools.py  test_notify.py  test_teleshell.py
archive/docker/: namespace
archive/manual-tests/: test_dask.py  test_spark.py
archive/manual-tests/blobstore/: test_localfs.py
archive/manual-tests/sql/: test_hive.py  test_hive_udf.py
archive/sql/: athena.py  hive.py  sql.py
docker/: Dockerfile  parent
example/: Dockerfile_test_release
manual-tests/: test_dask.py  test_email.py  test_notify.py  test_spark.py  test_teleshell.py
manual-tests/blobstore/: test_localfs.py
manual-tests/sql/: test_athena.py  test_hive.py  test_hive_udf.py
release/: Dockerfile_release  Dockerfile_test_release  make-release  test-release
src/: setup.py
src/coyote/: a_sync.py  biglist.py  bokeh.py  config.py  dask.py  datetime.py  docker.py  functools.py  http_client.py  iterate.py  json.py  logging.py  model_service.py  otherargs.py  path.py  pickle.py  spark.py  streamer.py  teleshell.py  text.py
src/coyote/blobstore/: _store.py  util.py
src/coyote/dropbox/: __init__.py  _azure.py  _dropbox.py  _file_store.py  _local.py  _s3.py  _util.py  _versioned_uploadable.py
src/coyote/sql/: hive.py  hive_udf_args_example.py  hive_udf_example.py  mysql.py  postgres.py  sql.py  util.py
src/utilities/: dask.py  notify.py
src/zpz/: __init__.py  _datetime.py  _functools.py  _notify.py  a_sync.py  async_.py  avro.py  aws_s3.py  batched_service.py  biglist.py  cachedlist.py  config.py  datetime.py  docker.py  dt.py  exceptions.py  gc.py  http_client.py  http_server.py  infix.py  iter.py  iterate.py  json.py  list.py  logger.py  logging.py  misc.py  model_service.py  mp.py  notify.py  pandas.py  path.py  pickle.py  profile.py  s3.py  serde.py  spark.py  streamer.py  text.py  timer.py  (+2 more)
src/zpz/blobstore/: _remote_store.py  _store.py  local_store.py  util.py
src/zpz/dropbox/: __init__.py  _datetime.py  _versioned_uploadable.py
src/zpz/filesys/: _fs.py  localfs.py  path.py
src/zpz/sql/: __init__.py  athena.py  hive.py  hive_table.py  hive_udaf_example.py  hive_udf.py  hive_udf_args_example.py  hive_udf_example.py  mysql.py  postgres.py  sql.py
sysbin/: logged
tests/: _test_dropbox_datetime.py  test.conf  test_a_sync.py  test_athena.py  test_avro.py  test_batched_service.py  test_biglist.py  test_config.py  test_dask.py  test_datetime.py  test_email.py  test_functools.py  test_hive.py  test_infix.py  test_logging.py  test_model_service.py  test_mp.py  test_notify.py  test_otherargs.py  test_path.py  test_pickle.py  test_profile.py  test_profiler.py  test_serde.py  test_spark.py  test_spark_connection.py  test_streamer.py  test_teleshell.py  test_text.py  test_timer.py
tests/dropbox/: test_local.py
tests/filesys/: test_localfs.py  test_path.py
tests/spark_test_scripts/: script_a.py
tests/sql/: common.py  test_athena.py  test_hive.py  test_hive_udf.py  test_impala.py  test_mysql.py  test_postgres.py
utilities/: avro.py  config.py  datetime.py  email.py  list.py  logging.py  misc.py  notify.py  profiler.py  s3.py  serde.py  teleshell.py  text.py
utilities/sql/: __init__.py  athena.py  hive.py  impala.py  mysql.py  mysqlalchemy.py  postgres.py  redshift.py  sql.py  util.py
zpz/: _functools.py  http_server.py  logging.py  pandas.py  pickle.py  sampling.py  slack.py  timer.py
zpz/sql/: hive_udaf_example.py  hive_udf_args_example.py  hive_udf_example.py  mysql.py
