[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "zpz"
authors = [
    {name = "Zepu Zhang", email = "zepu.zhang@gmail.com"},
]
dependencies = [
    "pytz",
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']


[project.urls]
Source = "https://github.com/zpz/utilities.py"


[project.optional-dependencies]
avro = [
    "avro-python3",
    "numpy",
    "snappy",
]
lineprofiler = [
    "line-profiler >=3.0,<4.0",
]
test = [
    "bandit",
    "coverage[toml]",
    "flake8",
    "mypy",
    "pylint",
    "pylint-exit",
    "pytest",
    "pytest-xdist",
]


[tool.flit.module]
name = "zpz"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-sv --log-cli-level info -p no:cacheprovider"
asyncio_mode = "auto"


[tool.coverage.report]
fail_under = 60
show_missing = true
skip_empty = true

[tool.coverage.run]
data_file = "/tmp/.coverage"