[metadata]
name = zpz
version = attr: zpz.__version__
description = Package zpz
python_requires = >=3.7
url = https://github.com/zpz/utilities.py
author = Zepu Zhang
author_email = zepu.zhang@gmail.com

[options]
include_package_data = True
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
zpz = py.typed

[bdist_wheel]
universal=0
