[metadata]
name = zpz
version = attr: zpz.__version__
url = https://github.com/zpz/utilities.py
description = Python utilities
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8


[options]
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >= 3.8
install_requires=
    line-profiler >=3.0,<4.0
    pytz
    rich


[options.packages.find]
where = src


[options.package_data]
example = py.typed
